--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-redux": "^7.1.26",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
     "sass": "^1.66.1",
     "typescript": "5.2.2"
