--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.425.0",
+    "@aws-sdk/s3-request-presigner": "^3.427.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.0.0",
@@ -30,9 +31,13 @@
     "@nestjs/throttler": "^5.0.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "mongoose": "^7.5.0",
+    "nanoid": "^5.0.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -44,7 +49,9 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.8",
     "@types/node": "^20.3.1",
+    "@types/sharp": "^0.32.0",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
@@ -58,7 +65,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "jest": {
     "moduleFileExtensions": [
