--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,10 @@
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3",
     "sass": "^1.66.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.6"
   }
 }
